--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -91,7 +91,7 @@
                     <div>
                         <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
                             <div class="d-flex flex-row align-items-center feed-text px-2">
-                              <a href="{% url 'myapp:other_profile' post.user.username %}" style="text-decoration: none;">
+                              <a href="{% with post_user=post.user request_user=request.user %}{% if post_user == request_user %}{% url 'myapp:profile' %}{% endif %}{% if post_user != request_user %}{% url 'myapp:other_profile' post.user.username %}{% endif %}{% endwith %}" style="text-decoration: none;">
                                 <img class="rounded-circle" src="{{ post.user.profile_picture.image.url }}" width="45">
                               </a>
                                 <div class="d-flex flex-column flex-wrap ml-2">
