--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -117,33 +117,41 @@
                     </div>
                     
                     <div class="d-flex justify-content-end socials p-2 py-3"> 
-                        <button class="like-button" data-post-id="{{ post.id }}" onclick="likePost(event, {{ post.id }})">
+                      <button class="like-button" data-post-id="{{ post.id }}" onclick="likePost(event, {{ post.id }})">
                         {% if request.user in post.likes.all %}
-                                {% if post.get_like_count > 0 %}
-                                    {{ post.get_like_count }}
-                                {% endif %}
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-heart" viewBox="0 0 16 16">
-                                    <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                                    </svg>
+                          {% if post.get_like_count > 0 %}
+                            <span class="badge badge-secondary" id="likeCount{{ post.id }}">{{ post.get_like_count }}</span>
+                          {% else %}
+                            <span class="badge badge-secondary" id="likeCount{{ post.id }}">0</span> {# Set the initial like count to 0 #}
+                          {% endif %}
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                            <path d="M8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                          </svg>
                         {% else %}
-                        {% if post.get_like_count > 0 %}
-                                    {{ post.get_like_count }}
-                                {% endif %}
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                                <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                                </svg>
+                          {% if post.get_like_count > 0 %}
+                            <span class="badge badge-secondary" id="likeCount{{ post.id }}">{{ post.get_like_count }}</span>
+                          {% else %}
+                            <span class="badge badge-secondary" id="likeCount{{ post.id }}">0</span> {# Set the initial like count to 0 #}
+                          {% endif %}
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="M8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                          </svg>
                         {% endif %}
                       </button>
+                      
+                      
                       <button class="comment-button like-button" onclick="window.location.href='{% url 'myapp:comments' post.id %}'">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-square-dots" viewBox="0 0 16 16">
                             <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
                             <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
                           </svg>
-                          {% with comment_count=post.get_comment_count %}
-            {% if comment_count > 0 %}
-                Comments <span class="badge badge-secondary" id="commentCount{{ post.id }}">{{ comment_count }}</span>
-            {% endif %}
-        {% endwith %}
+                         
+                
+                          {% if post.comment_count > 0 %}
+                          <span class="badge badge-secondary" id="commentCount{{ post.id }}">{{ post.comment_count }}</span>
+                        {% endif %}
+             
+           
                       </button>
                       <button class="share-button like-button">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
@@ -159,49 +167,85 @@
 </div>
 
 <script>
-    function likePost(event, postId) {
-      event.preventDefault();
-      var likeButton = event.target;
-
-      console.log('likeButton:', likeButton);
-
-      var xhr = new XMLHttpRequest();
-      xhr.open('POST', '{% url "myapp:like_post" %}', true);
-      xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-      xhr.setRequestHeader('X-CSRFToken', getCookie('csrftoken'));
-
-      xhr.onload = function() {
-        if (xhr.status === 200) {
-          console.log(xhr.responseText);
-
-          try {
-            var response = JSON.parse(xhr.responseText);
-            if (response.success) {
-              var buttonElement = likeButton.parentNode;
-              if (response.action === 'liked') {
-                buttonElement.querySelector('svg').classList.remove('bi-heart');
-                buttonElement.querySelector('svg').classList.add('bi-heart-fill');
-                buttonElement.querySelector('svg').style.fill = 'red';
-              } else if (response.action === 'unliked') {
-                buttonElement.querySelector('svg').classList.remove('bi-heart-fill');
-                buttonElement.querySelector('svg').classList.add('bi-heart');
-                buttonElement.querySelector('svg').style.fill = 'currentColor';
-              }
-            }
-          } catch (error) {
-            console.error('Error parsing JSON response:', error);
-          }
-        } else {
-          console.error('Request failed with status:', xhr.status);
+  function likePost(event, postId) {
+    event.preventDefault();
+    var likeButton = event.currentTarget;
+  
+    // Update the button appearance instantly
+    var buttonElement = likeButton.parentNode;
+    var isLiked = buttonElement.querySelector('svg').classList.contains('bi-heart-fill');
+    var likeCountElement = buttonElement.querySelector(`#likeCount${postId}`);
+    if (isLiked) {
+      buttonElement.querySelector('svg').classList.remove('bi-heart-fill');
+      buttonElement.querySelector('svg').classList.add('bi-heart');
+      buttonElement.querySelector('svg').style.fill = 'currentColor';
+  
+      // Decrement the like count by 1 when unliking a post
+      if (likeCountElement) {
+        var currentCount = parseInt(likeCountElement.textContent, 10);
+        if (!isNaN(currentCount) && currentCount > 0) {
+          likeCountElement.textContent = (currentCount - 1).toString();
         }
-      };
-
-      xhr.onerror = function() {
-        console.error('Request failed.');
-      };
-
-      xhr.send('post_id=' + encodeURIComponent(postId));
+      }
+    } else {
+      buttonElement.querySelector('svg').classList.remove('bi-heart');
+      buttonElement.querySelector('svg').classList.add('bi-heart-fill');
+      buttonElement.querySelector('svg').style.fill = 'red';
+  
+      // Increment the like count by 1 when liking a post
+      if (likeCountElement) {
+        var currentCount = parseInt(likeCountElement.textContent, 10);
+        if (!isNaN(currentCount)) {
+          likeCountElement.textContent = (currentCount + 1).toString();
+        }
+      }
     }
+  
+    // Hide the like count element if the count is zero
+    if (likeCountElement) {
+      var currentCount = parseInt(likeCountElement.textContent, 10);
+      if (!isNaN(currentCount) && currentCount === 0) {
+        likeCountElement.style.display = 'none';
+      } else {
+        likeCountElement.style.display = 'inline'; // Show the element
+      }
+    }
+  
+    // Send the like/unlike request to the server (you can keep the server interaction part as it is)
+    var xhr = new XMLHttpRequest();
+    xhr.open('POST', '{% url "myapp:like_post" %}', true);
+    xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+    xhr.setRequestHeader('X-CSRFToken', getCookie('csrftoken'));
+  
+    xhr.onload = function() {
+      if (xhr.status === 200) {
+        console.log(xhr.responseText);
+      } else {
+        console.error('Request failed with status:', xhr.status);
+      }
+    };
+  
+    xhr.onerror = function() {
+      console.error('Request failed.');
+    };
+  
+    xhr.send('post_id=' + encodeURIComponent(postId));
+  }
+  
+  // Additional script to hide like count elements with zero count on page load
+  document.addEventListener('DOMContentLoaded', function() {
+    var likeCountElements = document.querySelectorAll('[id^="likeCount"]');
+    likeCountElements.forEach(function(likeCountElement) {
+      var count = parseInt(likeCountElement.textContent, 10);
+      if (!isNaN(count) && count === 0) {
+        likeCountElement.style.display = 'none';
+      }
+    });
+  });
+  
+  
+  
+
 
     function deletePost(postId) {
       var deleteConfirmationModal = document.getElementById('deleteConfirmationModal');
