--- a/myapp/templates/myapp/navbar.html
+++ b/myapp/templates/myapp/navbar.html
@@ -1,18 +1,14 @@
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Vigu</title>
   {% load static %}
-
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400&display=swap">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
+    /* Shared styles for both mobile and desktop views */
     body {
       font-family: 'Agdasima', sans-serif;
       background-color: skyblue;
@@ -127,6 +123,20 @@
     nav a.active {
       color: rgb(36, 224, 209);
     }
+
+    /* Desktop view */
+    @media screen and (min-width: 768px) {
+      /* Increase card width */
+      .container {
+        max-width: 100%; /* Change this value to increase the card width */
+        margin: 0 auto;
+      }
+      /* Increase navbar width */
+      nav {
+        max-width: 70%; /* Change this value to increase the navbar width */
+        margin: 10px auto 0;
+      }
+    }
   </style>
 </head>
 <body>
@@ -137,8 +147,7 @@
     <a href="{% url 'myapp:chat_select_user' %}" class="{% if request.resolver_match.view_name == 'myapp:chat_select_user' %}active{% endif %}"><i class="fas fa-envelope"></i></a>
     <a href="{% url 'myapp:notifications' %}" class="{% if request.resolver_match.view_name == 'myapp:notifications' %}active{% endif %}"><i class="fas fa-bell"></i></a>
     <a href="{% url 'myapp:logout' %}" class="{% if request.resolver_match.view_name == 'myapp:logout' %}active{% endif %}"><i class="fas fa-sign-out-alt"></i></a>
-    
-    
+
     <div class="animation start-home"></div>
   </nav>
 
